--- a/views/user/productlist.ejs
+++ b/views/user/productlist.ejs
@@ -76,7 +76,7 @@
   <div class="row">
  
     <!-- lap view -->
- <div class="col-4  col-lg-3 laptopsortfilter ">
+ <div class="col-4  col-lg-3 laptopsortfilter mt-3">
       <h5>sorting & filter</h5>
       <div class="col-12 formbox" style="width: 90%">
         <p>sort by price</p>
