--- a/views/htmlbody/bootsfooter.ejs
+++ b/views/htmlbody/bootsfooter.ejs
@@ -1,5 +1,4 @@
-<!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container-fluid mt-5">
+<div class="mt-2">
   <!-- Footer -->
   <footer
           class="text-center text-lg-start text-white"
@@ -96,19 +95,7 @@
       </section>
       <!-- Section: Links -->
     </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
-    <div
-         class="text-center p-3"
-         style="background-color: rgba(0, 0, 0, 0.2)"
-         >
-      © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/"
-         >furnica.com</a
-        >
-    </div>
-    <!-- Copyright -->
+  
   </footer>
   <!-- Footer -->
 </div>
