--- a/views/htmlbody/navbar.ejs
+++ b/views/htmlbody/navbar.ejs
@@ -43,11 +43,12 @@ justify-content: center;
  <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
 
 
-      <div class="col-4 col-sm-3 col-md-2 px-1">
+      <div class="col-5 col-sm-3 col-md-2 text-start  px-1">
+
         <a class="navbar-brand" href="/">
-      
-        <img class="img-fluid " style="width: 70%;" src="/assests/logo11.png" alt="">
+        <img class="img-fluid " style="width: 60%;" src="/assests/logo11.png" alt="">
         </a>    
+
         </div>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
