--- a/views/htmlbody/Adminheader.ejs
+++ b/views/htmlbody/Adminheader.ejs
@@ -127,12 +127,27 @@ button>i{
             </a>
           </li>
 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/admin/banner">
               <i class="typcn typcn-document-text menu-icon"></i>
               <span class="menu-title">Banners</span>
             </a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#ui-basicz" aria-expanded="false" aria-controls="ui-basicz">
+              <i class="typcn typcn-briefcase menu-icon"></i>
+              <span class="menu-title">Banners</span>
+              <i class="typcn typcn-chevron-right menu-arrow"></i>
+            </a>
+            <div class="collapse" id="ui-basicz">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="/admin/banner" >Banners</a></li>
+                <li class="nav-item"> <a class="nav-link" href="/admin/sliders">Sliders</a></li>
+              </ul>
+            </div>
           </li>
+
+          <!--  -->
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
               <i class="typcn typcn-briefcase menu-icon"></i>
