--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,6 @@ height: 100%;
 object-fit: cover;
 }
  @media only screen and (max-width : 480px) {
-
   .main_circle {
 display: none;
   }
@@ -138,7 +137,6 @@ display: none;
   right: -10%;
   top: -20%;
   z-index: 1;
-
   transition: 0.5s ease-in-out;
 }
 .catg_card:hover > .card_imag {
@@ -184,21 +182,22 @@ display: none;
 .product_card {
   border-radius: 10%;
   position: relative;
-  background-color: rgb(255, 255, 255);
   transition: 0.5s ease-in-out;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: rgba(255, 255, 223, 0.815);
+background: linear-gradient(180deg, rgba(255, 255, 223, 0.797) 10%, rgba(255, 255, 255, 0.884) 96%);
+  box-shadow:  rgba(0, 0, 0, 0.154) 0px 3px 6px, rgba(0, 0, 0, 0.09) 0px 3px 6px;
 overflow: hidden;
+
 }
 .product_card:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 18px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 18px -2px, rgba(0, 0, 0, 0.3) 0px 3px 10px -3px;
 }
 .detail_btm {
   position: absolute;
   width: 100%;
   height: 50%;
   cursor: pointer;
-  bottom: -20%;
+  bottom: -19%;
   padding: 10px 10px 10px 20px;
   transition: 0.5s ease-in-out;
   line-height: 10px;
@@ -206,7 +205,7 @@ overflow: hidden;
   background-color: rgba(240, 248, 255, 0.324);
 }
 .detail_btm:hover {
-  bottom: -10%;
+  bottom: -9%;
 }
 #name {
   font-size: 1.2rem;
@@ -498,6 +497,7 @@ overflow: hidden;
   overflow: hidden;
 }
 .best_selling_box:hover .blur_selling_box {
+  text-align: center;
   transition: 0.5s ease-out;
   animation: slideup 0.5s linear forwards;
 }
@@ -510,16 +510,18 @@ overflow: hidden;
 .blur_selling_box {
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.275);
+  background-color: rgba(35, 32, 32, 0.275);
+  color: white;
   backdrop-filter: blur(5px);
   position: absolute;
   bottom: -13rem;
   transition: 0.5s ease-out;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  text-align: left;
-  padding-left: 1rem;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+
 }
 
 .formbox {
