--- a/views/user/forgotpassword/mailSubmittion.ejs
+++ b/views/user/forgotpassword/mailSubmittion.ejs
@@ -18,7 +18,7 @@
   <body>
     <section class="vh-100 login_main">
       <div class="container h-100">
-        <a href="/furnica/home">
+        <a href="/">
           <img class="mt-2" src="/assests/logo.png" alt=""></a>
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-lg-12 col-xl-11 m-auto">
@@ -47,8 +47,8 @@
                             class="form-control"
                             id="email"
                             placeholder="name@example.com"
-                            value="trademahi05@gmail.com"
                             name="email"
+                            required
                           />
 
                           <label class="form-label mt-3" for="typeEmailX-2"
