--- a/views/user/forgotpassword/resetPassword.ejs
+++ b/views/user/forgotpassword/resetPassword.ejs
@@ -49,10 +49,9 @@
                             id="password"
                             placeholder="Password"
                             name="password"
-                            required
-                          />
-
-                          <span id="passError"></span>
+                        
+                            required/>
+                      
                         </div>
                       </div>
 
@@ -65,14 +64,13 @@
                             id="confirmPassword"
                             placeholder="Confirm Password"
                             name="confirmPassword"
-                            onkeyup="validateconfrmPassword()"
+                            onkeyup="validatePassword()"
                             required
                           />
 
                           <span
                             id="conpassError"
-                            style="color: rgb(241, 69, 69)"
-                          ></span>
+                            style="color: rgb(241, 69, 69)"></span>
                         </div>
                       </div>
 
@@ -90,8 +88,7 @@
                       <div class="form-check d-flex justify-content-center">
                         <label
                           class="form-check-label ms-auto"
-                          for="form2Example3"
-                        >
+                          for="form2Example3">
                           <p>
                             Alredy have an account?
                             <a class="small" href="/login">Login</a>
@@ -100,7 +97,8 @@
                       </div>
                     </form>
                                     
-                                </div>
+                
+                  </div>
                                 <div class="col-7 col-md-6 col-lg-6 col-xl-5 d-flex align-items-center">
                                     <img src="https://pathwayport.com/saasland/images/reset_pass.png"
                                         class="img-fluid" alt="Sample image" />
@@ -120,14 +118,14 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 
-</script>
 <script> 
-  const password = document.getElementById("password");
-  const confirmPassword = document.getElementById("confirmPassword");
+  const password = document.getElementById("password").value;
+  const confirmPassword = document.getElementById("confirmPassword").value;
   const passwordError = document.getElementById("conpassError");
 
-  function validateconfrmPassword() {
-    if (password.value !== confirmPassword.value) {
+  function validatePassword() {
+    console.log("akakka")
+    if (password !== confirmPassword) {
       passwordError.innerHTML = "Passwords do not match";
       confirmPassword.setCustomValidity("Passwords do not match");
     } else {
@@ -135,4 +133,6 @@
       confirmPassword.setCustomValidity("");
     }
   }
+  // ======================
+  
 <script/>
