--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -143,7 +143,8 @@
   const signup_btn = document.getElementById("signup_btn");
 
   const emailregx = /\b^[^ ][a-z.\-_0-9]+@[a-z0-9]+\.[a-z]{2,3}\b/;
-  const passregx = /^(?=.*\d)(?=.*[a-zA-Z]).{4,14}$/;
+  const passregx=/^(?!.*\s).{4,12}$/
+
 
   var email_correct = false;
   var pass_correct = false(
