--- a/views/user/forgotpassword/resetPassword.ejs
+++ b/views/user/forgotpassword/resetPassword.ejs
@@ -14,6 +14,10 @@
     <title><%= locals.title  %></title>
 </head>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
 <body>
     <section class="vh-100 login_main">
         <div class="container h-100">
@@ -44,14 +48,13 @@
                         <div class="flex-fill mb-0">
                           <label for="Password">Password</label>
                           <input
-                            type="password"
-                            class="form-control"
-                            id="password"
-                            placeholder="Password"
-                            name="password"
-                        
-                            required/>
-                      
+                              type="password"
+                              class="form-control"
+                         
+                              placeholder="Password"
+                              id="password"
+                              name="password" />
+                   
                         </div>
                       </div>
 
@@ -64,13 +67,11 @@
                             id="confirmPassword"
                             placeholder="Confirm Password"
                             name="confirmPassword"
-                            onkeyup="validatePassword()"
-                            required
-                          />
+                            required />
 
                           <span
                             id="conpassError"
-                            style="color: rgb(241, 69, 69)"></span>
+                            style="color: rgb(241, 69, 69)"> <%= locals.errorDetail  %></span>
                         </div>
                       </div>
 
@@ -114,25 +115,3 @@
 </body>
 
 </html>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-<script> 
-  const password = document.getElementById("password").value;
-  const confirmPassword = document.getElementById("confirmPassword").value;
-  const passwordError = document.getElementById("conpassError");
-
-  function validatePassword() {
-    console.log("akakka")
-    if (password !== confirmPassword) {
-      passwordError.innerHTML = "Passwords do not match";
-      confirmPassword.setCustomValidity("Passwords do not match");
-    } else {
-      passwordError.innerHTML = "";
-      confirmPassword.setCustomValidity("");
-    }
-  }
-  // ======================
-  
-<script/>
