--- a/views/admin/htmltopdf.ejs
+++ b/views/admin/htmltopdf.ejs
@@ -50,24 +50,43 @@
     <tbody>
       <%if(orders.length>0)  {%>
       <%for(let i=0;i <orders.length; i++){%>
-      <tr>
-        <td><%= orders[i]._id  %></td>
-        <% for( let index = 0; index < orders[i].product.length; index++) { %>
-        <td><%= orders[i].product[index].name  %></td>
-        <td><span><i class="fa-solid fa-indian-rupee-sign"></i></span> <%= orders[i].product[index].price  %></td>
-        <td><%= orders[i].product[index].quantity  %></td>
-        <% } %>
-        <td>
-          <%= orders[i].name %>
+        <tr style="border-bottom: 1px solid grey; font-size: 0.8rem;">
+          <td><%= orders[i]._id  %></td>
+            <td >
+          <% for( let index = 0; index < orders[i].product.length; index++) { %>
+        <%= orders[i].product[index].name  %> 
+          <br>
+   
+          <% } %>
         </td>
-        <td>
-          <%= orders[i].paymentMethod %>
-        </td>
-        <td>
-          <%= orders[i].status %>
-        </td>
-        
-      </tr>
+          <!-- ========== -->
+          <td>
+            <% for( let index = 0; index < orders[i].product.length; index++) { %>
+         <%= orders[i].product[index].price  %> 
+            <br>
+     
+            <% } %>
+          </td>
+          <!--  -->
+          <td class="text-center">
+            <% for( let index = 0; index < orders[i].product.length; index++) { %>
+           <%= orders[i].product[index].quantity  %> 
+            <br>
+     
+            <% } %>
+          </td>
+          <!--  -->
+          <td>
+            <%= orders[i].name %>
+          </td>
+          <td>
+            <%= orders[i].paymentMethod %>
+          </td>
+          <td>
+            <%= orders[i].status %>
+          </td>
+          
+        </tr>
       <% } %>
       <%}else{%>
   
