--- a/views/admin/orderdetails.ejs
+++ b/views/admin/orderdetails.ejs
@@ -122,7 +122,7 @@ box-shadow:inset rgba(249, 249, 249, 0.769) 0px 2px 4px 0px;
        <div class="row context_box mb-2 ">
 
      <div class="col-6 col-sm-3" style="border-radius: 10px; height: 100px;min-height: 130px;max-width: 130px;">
-   <img  class="img-fluid " style="height: 100%;width: 100%;"  src="/uploads/<%= orders.product[index].image  %>" alt="">
+   <img  class="img-fluid " style="height: 100%;width: 100%;"  src="<%= orders.product[index].image  %>" alt="">
          </div>
 
          <div class="col-lg-5 col-5">
@@ -237,11 +237,7 @@ box-shadow:inset rgba(249, 249, 249, 0.769) 0px 2px 4px 0px;
 
  </div> 
 
- <!-- <div class="col-10 col-lg-3  text-center  mx-auto">
-     <p>Payment Method:
-   <%= orders.paymentMethod %>
-   </p>
- </div> -->
+
 
 
 
