--- a/views/admin/salesreport.ejs
+++ b/views/admin/salesreport.ejs
@@ -1,92 +1,116 @@
 <%- include('../htmlbody/Adminheader') -%>
-                <main>
     
-<div class="container mt-2">
+    
+<div class="container-fluid mt-2">
                    <div class="row">
                     <div class="col-7  m-auto">
 
                  <div class="row  bg-primary rounded-pill ">               
                     <div class="col-12 text-center  m-auto  text-light " style="display: flex;  justify-content: center;align-items: center;gap: 3px;padding-left: 40px;">
-           
-                            <h2 id="headname" > <%= locals.durations %> </h2> 
+                           
+                      <h2 id="headname" > <%= locals.durations %> </h2> 
                            <h2 > orders</h2>
                         <h1><%= locals.orderlength  %></h1> 
+                        <a href="/admin/pdfconvert?duration=<%= locals.durations %>"> 
                         <button class="btn" onclick="handlepdf('<%= locals.durations %>')">
                             <i style="font-size: 1.2rem;color: white;" class="fa-solid fa-download"></i>
-                        </button>
+                        </button></a>  
                     </div>       
 </div>
 <p id="pdfpopup" style="color:green"></p>
 
                     </div>
 
-             </div>      
-     <div class="row mt-3">
-      <div class="col-12 grid-margin stretch-card">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Sales list</h4>
-        
-            <div class="table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
+             </div>
+
+<!--  -->
+             
+ 
+<div class="row">
+  <div class="col-12 grid-margin stretch-card">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Product list</h4>
+    
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
          
-                      <th>OFFERID</th>
-                    
-                      <th>PRODUCT </th>
-                      <th>PRICE</th>
-                      <th>QUANTITY</th>
-                      <th>USER</th>
-                
-                      <th>PAPYMENT</th>
-                      <th>STATUS</th>
-                    </tr>
-                </thead>
-                <tbody>
+                <th>OFFERID</th>
+              
+                <th rowspan="5">PRODUCT </th>
+                <th>PRICE</th>
+                <th>QUANTITY</th>
+                <th>USER</th>
+          
+                <th>PAPYMENT</th>
+                <th>STATUS</th>
+              </tr>
+            </thead>
+           
+            <tbody>
                   
-                  <%if(orders.length>0)  {%>
-                    <%for(let i=0;i <orders.length; i++){%>
-                    <tr>
-                      <td><%= orders[i]._id  %></td>
-
-                      <% for( let index = 0; index < orders[i].product.length; index++) { %>
-                      <td><%= orders[i].product[index].name  %></td>
-                      <td><span><i class="fa-solid fa-indian-rupee-sign"></i></span> <%= orders[i].product[index].price  %></td>
-                      <td class="text-center"><%= orders[i].product[index].quantity  %></td>
-                      <% } %>
-                      <td>
-                        <%= orders[i].name %>
-                      </td>
-                      <td>
-                        <%= orders[i].paymentMethod %>
-                      </td>
-                      <td>
-                        <%= orders[i].status %>
-                      </td>
-                      
-                    </tr>
+              <%if(orders.length>0)  {%>
+              
+              
+                <%for(let i=0;i <orders.length; i++){%>
+                <tr>
+                  <td><%= orders[i]._id  %></td>
+                    <td >
+                  <% for( let index = 0; index < orders[i].product.length; index++) { %>
+                <p> <%= orders[i].product[index].name  %> </p> 
+                  <br>
+           
+                  <% } %>
+                </td>
+                  <!-- ========== -->
+                  <td>
+                    <% for( let index = 0; index < orders[i].product.length; index++) { %>
+                  <p> <%= orders[i].product[index].price  %> </p> 
+                    <br>
+             
                     <% } %>
-                    <%}else{%>
-                
-                      <td colspan="5">products note found</td>
-                      
-                      </tr>
-                      <% } %>
+                  </td>
+                  <!--  -->
+                  <td class="text-center">
+                    <% for( let index = 0; index < orders[i].product.length; index++) { %>
+                  <p> <%= orders[i].product[index].quantity  %> </p> 
+                    <br>
+             
+                    <% } %>
+                  </td>
+                  <!--  -->
+                  <td>
+                    <%= orders[i].name %>
+                  </td>
+                  <td>
+                    <%= orders[i].paymentMethod %>
+                  </td>
+                  <td>
+                    <%= orders[i].status %>
+                  </td>
+                  
+                </tr>
+                <% } %>
+                <%}else{%>
+            
+                  <td colspan="5">products note found</td>
+                  
+                  </tr>
+                  <% } %>
 
-                </tbody>
-              </table>
-            </div>
-          </div>
+            </tbody>
+
+          </table>
         </div>
-   
-
+      </div>
     </div>
+
 
 </div>
 
-                </main>
-               
+</div>
                 <%- include('../htmlbody/AdminFooter') -%>
 <script>
 
